--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             referrerpolicy="no-referrer"
         />
         <link rel="stylesheet" href="./styles/output.css" />
-        <title>Burger Bom1</title>
+        <title>Burger Bom</title>
     </head>
     <body>
         <header class="w-full h-[420px] bg-zinc-900 bg-home bg-cover bg-center">
