--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     src="./assets/hamb-1.png"
                     alt="Logo devburger"
                     class="w-32 h-32 rounded-full shadow-lg hover:scale-110 duration-200"
-                    style="cursor: pointer;"
+                    style="cursor: pointer"
                     onclick="alerta();"
                 />
                 <h1 class="text-4xl mt-4 mb-2 font-bold text-white">
@@ -69,6 +69,8 @@
                         src="./assets/hamb-1.png"
                         alt="Smash Burguer"
                         class="w-28 h-28 rounded-md hover:scale-110 hover:rotate-2 duration-300"
+                        style="cursor: pointer"
+                        onclick="alerta();"
                     />
 
                     <div>
@@ -103,6 +105,8 @@
                         src="./assets/hamb-2.png"
                         alt="Duplo Smash Burguer"
                         class="w-28 h-28 rounded-md hover:scale-110 hover:rotate-2 duration-300"
+                        style="cursor: pointer"
+                        onclick="alerta();"
                     />
 
                     <div>
@@ -137,6 +141,8 @@
                         src="./assets/hamb-3.png"
                         alt="Smash Cheader Burguer"
                         class="w-28 h-28 rounded-md hover:scale-110 hover:rotate-2 duration-300"
+                        style="cursor: pointer"
+                        onclick="alerta();"
                     />
 
                     <div>
@@ -171,6 +177,8 @@
                         src="./assets/hamb-4.png"
                         alt="Chiken Burguer"
                         class="w-28 h-28 rounded-md hover:scale-110 hover:rotate-2 duration-300"
+                        style="cursor: pointer"
+                        onclick="alerta();"
                     />
 
                     <div>
@@ -205,6 +213,8 @@
                         src="./assets/hamb-7.png"
                         alt="Burguer Cowboy"
                         class="w-28 h-28 rounded-md hover:scale-110 hover:rotate-2 duration-300"
+                        style="cursor: pointer"
+                        onclick="alerta();"
                     />
 
                     <div>
@@ -239,6 +249,8 @@
                         src="./assets/hamb-8.png"
                         alt="Salada Burguer"
                         class="w-28 h-28 rounded-md hover:scale-110 hover:rotate-2 duration-300"
+                        style="cursor: pointer"
+                        onclick="alerta();"
                     />
 
                     <div>
@@ -275,7 +287,7 @@
             <!--GRID BEBIDAS -->
 
             <div
-                class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-16"
+                class="flex grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-16"
                 id="menu"
             >
                 <!--BEBIDA 1 -->
@@ -290,7 +302,7 @@
                         <p class="font-bold">Coca Lata</p>
 
                         <div
-                            class="flex items-center gap-2 justify-between mt-3"
+                            class="flex items-center gap-2 place-content-around mt-3"
                         >
                             <p class="font-bold">R$ 5.29</p>
                             <button
@@ -320,7 +332,7 @@
                         <p class="font-bold">Guaraná Antarctica Lata</p>
 
                         <div
-                            class="flex items-center gap-2 justify-between mt-3"
+                            class="flex items-center gap-2 place-content-around mt-3"
                         >
                             <p class="font-bold">R$ 5.19</p>
                             <button
@@ -409,7 +421,11 @@
             type="text/javascript"
             src="https://cdn.jsdelivr.net/npm/toastify-js"
         ></script>
-        <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+        <script
+            src="https://code.jquery.com/jquery-3.7.1.js"
+            integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+            crossorigin="anonymous"
+        ></script>
         <script src="script.js"></script>
     </body>
 </html>
