Atualizações de teste para exibir modal

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     src="./assets/hamb-1.png"
                     alt="Logo devburger"
                     class="w-32 h-32 rounded-full shadow-lg hover:scale-110 duration-200"
+                    onclick="alerta()"
                 />
                 <h1 class="text-4xl mt-4 mb-2 font-bold text-white">
                     Burguer Bom
