--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                         <p class="font-bold">Coca Lata</p>
 
                         <div
-                            class="flex items-center gap-2 place-content-around mt-3"
+                            class="flex items-center gap-2 justify-between mt-5"
                         >
                             <p class="font-bold">R$ 5.29</p>
                             <button
@@ -332,7 +332,7 @@
                         <p class="font-bold">Guaraná Antarctica Lata</p>
 
                         <div
-                            class="flex items-center gap-2 place-content-around mt-3"
+                            class="flex items-center gap-2 justify-between mt-5"
                         >
                             <p class="font-bold">R$ 5.19</p>
                             <button
@@ -400,6 +400,100 @@
         </div>
 
         <!-- FIM MODAL CART -->
+
+        <!-- MODAL LANCHES TEST -->
+
+        <div
+            class="bg-black/70 w-full h-full fixed top-0 left-0 z-[99] items-center justify-center flex"
+            id="snack-modal"
+        >
+            <div class="bg-white p-5 rounded-md min-w-[90%] md:min-w-[600px]">
+                <h2 class="font-bold text-center text-2xl mb-2">
+                    Informações do Lanche
+                </h2>
+
+                <div id="cart-items" class="flex justify-between flex-col mb-2">
+                    <p class="font-bold">
+                        Lanche: <span id="cart-items"> # </span>
+                    </p>
+                    <p class="font-bold">
+                        Preço: <span id="cart-items"> # </span>
+                    </p>
+                </div>
+
+                <div>
+                    <form action="#" method="get" autocomplete="off">
+                        <p class="font-bold">Adicionais</p>
+                        <input
+                            type="checkbox"
+                            id="add-items"
+                            name="add-items"
+                            value="sim"
+                        />
+                        <p class="inline font-sans">Cheader</p>
+                    </form>
+                </div>
+
+                <div>
+                    <form action="#" method="get" autocomplete="off">
+                        <input
+                            type="checkbox"
+                            id="add-items"
+                            name="add-items"
+                            value="sim"
+                        />
+                        <p class="inline font-sans">Queijo Mussarela</p>
+                    </form>
+                </div>
+
+                <div>
+                    <form action="#" method="get" autocomplete="off">
+                        <input
+                            type="checkbox"
+                            id="add-items"
+                            name="add-items"
+                            value="sim"
+                        />
+                        <p class="inline font-sans">Tomate</p>
+                    </form>
+                </div>
+
+                <div>
+                    <form action="#" method="get" autocomplete="off">
+                        <input
+                            type="checkbox"
+                            id="add-items"
+                            name="add-items"
+                            value="sim"
+                        />
+                        <p class="inline font-sans">Bacon</p>
+                    </form>
+                </div>
+
+                <label for="observations" class="font-bold">Observações:</label>
+                <textarea
+                    id="observations"
+                    placeholder="Digite suas observações..."
+                    class="w-full border-2 p-1 rounded my-1"
+                ></textarea>
+
+                <div id="additional-items" class="mt-2"></div>
+
+                <div class="flex items-center justify-between mt-5 w-full">
+                    <button class="font-bold" id="close-snack-modal-btn">
+                        Fechar
+                    </button>
+                    <button
+                        id="add-to-cart-btn"
+                        class="bg-green-600 text-white px-4 py-1 rounded"
+                    >
+                        Adicionar ao Carrinho
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <!-- FIM MODAL LANCHES -->
 
         <!-- BOTÃO CART FOOTER -->
 
