--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             <!--GRID BEBIDAS -->
 
             <div
-                class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-5 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-16"
+                class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-16"
                 id="menu"
             >
                 <!--BEBIDA 1 -->
@@ -316,7 +316,7 @@
                     </div>
                 </div>
 
-                <!--FIM BEBIDA 1-->
+                <!--FIM BEBIDA 1 -->
 
                 <!--BEBIDA 2 -->
                 <div class="flex gap-2 w-full">
@@ -346,9 +346,128 @@
                     </div>
                 </div>
 
-                <!--FIM BEBIDA 2-->
+                <!--FIM BEBIDA 2 -->
+
+                <!--BEBIDA 3 -->
+                <div class="flex gap-2 w-full">
+                    <img
+                        src="./assets/3708-fanta-laranja-lata-350ml-12un.20241106174928.png"
+                        alt="Fanta Laranja Lata"
+                        class="w-28 h-28 rounded-md hover:scale-110 hover:rotate-2 duration-300"
+                    />
+
+                    <div class="w-full">
+                        <p class="font-bold">Fanta Laranja Lata</p>
+
+                        <div
+                            class="flex items-center gap-2 justify-between mt-5"
+                        >
+                            <p class="font-bold">R$ 4.19</p>
+                            <button
+                                class="bg-gray-900 px-5 rounded add-to-cart-btn"
+                                data-name="Fanta Laranja Lata"
+                                data-price="4.19"
+                            >
+                                <i
+                                    class="fa fa-cart-plus text-lg text-white"
+                                ></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <!--FIM BEBIDA 3 -->
+
+                <!--BEBIDA 4 -->
+                <div class="flex gap-2 w-full">
+                    <img
+                        src="./assets/Pet-2-Litros-Coca-Cola-PNG.png"
+                        alt="Coca Cola 2L"
+                        class="w-28 h-28 rounded-md hover:scale-110 hover:rotate-2 duration-300"
+                    />
+
+                    <div class="w-full">
+                        <p class="font-bold">Coca Cola 2L</p>
+
+                        <div
+                            class="flex items-center gap-2 justify-between mt-5"
+                        >
+                            <p class="font-bold">R$ 8.19</p>
+                            <button
+                                class="bg-gray-900 px-5 rounded add-to-cart-btn"
+                                data-name="Coca Cola 2L"
+                                data-price="8.19"
+                            >
+                                <i
+                                    class="fa fa-cart-plus text-lg text-white"
+                                ></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <!--FIM BEBIDA 4 -->
+
+                <!--BEBIDA 5 -->
+                <div class="flex gap-2 w-full">
+                    <img
+                        src="./assets/fanta-uva-1.png"
+                        alt="Fanta Uva Lata"
+                        class="w-28 h-28 rounded-md hover:scale-110 hover:rotate-2 duration-300"
+                    />
+
+                    <div class="w-full">
+                        <p class="font-bold">Fanta Uva Lata</p>
+
+                        <div
+                            class="flex items-center gap-2 justify-between mt-5"
+                        >
+                            <p class="font-bold">R$ 4.19</p>
+                            <button
+                                class="bg-gray-900 px-5 rounded add-to-cart-btn"
+                                data-name="Fanta Uva Lata"
+                                data-price="4.19"
+                            >
+                                <i
+                                    class="fa fa-cart-plus text-lg text-white"
+                                ></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <!--FIM BEBIDA 5 -->
+
+                <!--BEBIDA 6 -->
+                <div class="flex gap-2 w-full">
+                    <img
+                        src="./assets/H2O.png"
+                        alt="h20 limoneto 500ml"
+                        class="w-28 h-28 rounded-md hover:scale-110 hover:rotate-2 duration-300"
+                    />
+
+                    <div class="w-full">
+                        <p class="font-bold">H2O limoneto 500ml</p>
+
+                        <div
+                            class="flex items-center gap-2 justify-between mt-5"
+                        >
+                            <p class="font-bold">R$ 6.19</p>
+                            <button
+                                class="bg-gray-900 px-5 rounded add-to-cart-btn"
+                                data-name="H2O limoneto 500ml"
+                                data-price="6.19"
+                            >
+                                <i
+                                    class="fa fa-cart-plus text-lg text-white"
+                                ></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <!--FIM BEBIDA 6 -->
             </div>
-            
 
             <!--FIM GRID BEBIDAS-->
         </div>
