--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
         <!-- MODAL CART -->
 
         <div
-            class="bg-black/70 w-full h-full fixed top-0 left-0 z-[99] items-center justify-center hidden"
+            class="bg-black/70 w-full h-full fixed top-0 left-0 z-[99] overflow-auto items-center justify-center hidden"
             id="cart-modal"
         >
             <div class="bg-white p-5 rounded-md min-w-[90%] md:min-w-[600px]">
