--- a/index.html
+++ b/index.html
@@ -140,7 +140,6 @@
                         alt="Smash Cheader Burguer"
                         class="w-28 h-28 rounded-md hover:scale-110 hover:rotate-2 duration-300"
                         style="cursor: pointer"
-                        onclick="alerta();"
                     />
 
                     <div>
@@ -158,6 +157,7 @@
                                 class="bg-gray-900 px-5 rounded add-to-cart-btn"
                                 data-name="Smash Cheader Burger"
                                 data-price="25.99"
+                                onclick="alerta_novo_lanche('Smash Cheader Burguer');"
                             >
                                 <i
                                     class="fa fa-cart-plus text-lg text-white"
