--- a/index.html
+++ b/index.html
@@ -487,9 +487,10 @@
                 <div
                     id="cart-items"
                     class="flex justify-between mb-2 flex-col"
+                    style="max-height: 600px; overflow: auto; padding-right: 30px;"
                 ></div>
 
-                <p class="font-bold">
+                <p class="font-bold" style="border-top: 1px solid lightgray;">
                     Total: <span id="cart-total">0.00</span>
                 </p>
 
