--- a/index.html
+++ b/index.html
@@ -494,12 +494,33 @@
                     "
                 ></div>
 
-                <p
-                    class="font-bold"
-                    style="border-top: 0.01rem solid darkorange"
-                >
+                <hr style="border-top: 0.01rem solid darkorange""/>
+
+                <p class="font-bold mt-5">
                     Total: <span id="cart-total">0.00</span>
                 </p>
+
+                <div class="mt-4">
+                    <form>
+                        <label class="font-bold" for="payment"
+                            >Selecione a forma de pagamento:
+                        </label>
+                        <select
+                            name="payment"
+                            id="payment"
+                            style="
+                                border: 1px solid lightgray;
+                                border-radius: 4px;
+                                padding: 5px;
+                            "
+                        >
+                            <option value="Cartao">Cartão De Crédito</option>
+                            <option value="Cartao">Cartão De Débito</option>
+                            <option value="Pix">Pix</option>
+                            <option value="Dinheiro">Dinheiro</option>
+                        </select>
+                    </form>
+                </div>
 
                 <p class="font-bold mt-4">Endereço Para Entrega:</p>
                 <input
