new.js and index
Correções de bug e mudanças no layout

--- a/index.html
+++ b/index.html
@@ -164,22 +164,22 @@
                     "
                 ></div>
                 <hr style="border-top: 0.01rem solid darkorange" />
-                <p class="font-bold">
+                <p class="font-bold" style="margin-top: 15px">
                     Total: <span id="cart-total">0.00</span>
                 </p>
 
                 <div class="mt-4">
                     <form>
-                        <label class="font-bold justify-between" for="payment"
-                            >Selecione a forma de pagamento:
+                        <label class="font-bold flex" for="payment"
+                            >Forma de pagamento:
                         </label>
                         <select
                             name="payment"
                             id="payment"
                             style="
-                                border: 2px solid lightgray;
-                                border-radius: 4px;
-                                padding: 5px;
+                                border: 1px solid #e5e7eb;
+                                border-radius: 0.25rem;
+                                padding: 10px;
                             "
                         >
                             <option value="Cartao">Cartão De Crédito</option>
