--- a/index.html
+++ b/index.html
@@ -242,5 +242,6 @@
             crossorigin="anonymous"
         ></script>
         <script src="script.js"></script>
+        <p class="hidden">ruan gostava do otavio em 2019</p>
     </body>
 </html>
