--- a/index.html
+++ b/index.html
@@ -160,7 +160,6 @@
                     style="
                         max-height: 400px;
                         overflow: auto;
-                        padding-right: 30px;
                     "
                 ></div>
                 <hr style="border-top: 0.01rem solid darkorange" />
@@ -176,8 +175,8 @@
                         <select
                             name="payment"
                             id="payment"
+                            class="bg-white border border-gray-300 text-black text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                             style="
-                                border: 1px solid #e5e7eb;
                                 border-radius: 0.25rem;
                                 padding: 10px;
                             "
@@ -189,13 +188,12 @@
                         </select>
                     </form>
                 </div>
-
                 <p class="font-bold mt-4">Endereço Para Entrega:</p>
                 <input
                     type="text"
                     placeholder="Digite Seu Endereço..."
                     id="address"
-                    class="w-full border-2 p-1 rounded my-1"
+                    class="w-full border-2 p-1 rounded my-1 border-gray-300"
                 />
 
                 <p class="text-red-600 hidden" id="address-warn">
