--- a/index.html
+++ b/index.html
@@ -147,7 +147,10 @@
         </div>
         <div
             class="bg-black/70 w-full h-full fixed top-0 left-0 z-[99] items-center justify-center hidden"
-            id="cart-modal"
+            id="cart-
+            
+            
+            "
         >
             <div class="bg-white p-5 rounded-md min-w-[90%] md:min-w-[600px]">
                 <h2 class="font-bold text-center text-2xl mb-2">
