--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                                 class="bg-gray-900 px-5 rounded add-to-cart-btn"
                                 data-name="Smash Burger"
                                 data-price="20.99"
+                                data-id="2"
                                 onclick="alertaNovoProduto('Smash Cheader Burguer');"
                             >
                                 <i
@@ -222,6 +223,7 @@
                 <input
                     type="number"
                     id="modalItemQuantity"
+                    value="1"
                     min="1"
                     max="99"
                     class="border border-gray-300 p-2 rounded"
